--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,700,900);
 @import url('http://fonts.googleapis.com/css?family=Ek+Mukta:400,600,700');
 
+/* custom styles */
+.advisor {
+	margin-bottom: 50px;
+}
 
 body {
     width: 100%;
