--- a/custom.css
+++ b/custom.css
@@ -17,15 +17,19 @@
 }
 
 .container {
-	width: 960px;
+	/*width: 960px;*/
+    width: 100%;
 }
 
 #navigation {
-	width: 960px;
+	/*width: 960px;*/
+    position: fixed;
+    width: 60%;
 }
 
 .page {
-	width: 960px;
+	/*width: 960px;*/
+    width: 60%;
 	padding: 0;
 }
 
